--- a/ZitoeXHotel.Server/Pages/Index.razor
+++ b/ZitoeXHotel.Server/Pages/Index.razor
@@ -1,7 +1,30 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h2>
+    Room Details
+</h2>
 
-Welcome to your new app.
+Name: @room.Name <br/>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+Price: ZAR @room.Price.ToString("N2") <br/>
+
+Description: @room.Description
+
+<hr/>
+
+<input type="number" @bind-value="room.Price" @bind-value:event="oninput"/> <br/>
+
+<input type="checkbox" @bind-value="room.IsActive" checked="@(room.IsActive?"checked":null)"/> &nbsp; Is Active? <br />
+<span>This room is @(room.IsActive?"Active" : "Inactive")</span>
+
+@code{
+
+    Data.Room room = new Data.Room
+    {
+        Id = 1,
+        Name = "ZitoeX Ultra Suite",
+        Description = "Our most expensive suite, with 2 beds, shower, TV, toilet,....",
+        Price = 1749.99,
+        IsActive = true
+    };
+}
