--- a/ZitoeXHotel.Server/Pages/Index.razor
+++ b/ZitoeXHotel.Server/Pages/Index.razor
@@ -1,30 +1,114 @@
 ﻿@page "/"
+@using Data;
 
-<h2>
-    Room Details
-</h2>
+<div class="bg-light border p-2">
+    <h2 class="bg-light border p-2">
+        Room Details
+    </h2>
 
-Name: @room.Name <br/>
+    Name: @room.Name <br />
 
-Price: ZAR @room.Price.ToString("N2") <br/>
+    Price: ZAR @room.Price.ToString("N2") <br />
 
-Description: @room.Description
+    Description: @room.Description
 
-<hr/>
+    <hr />
 
-<input type="number" @bind-value="room.Price" @bind-value:event="oninput"/> <br/>
+    <input type="number" @bind-value="room.Price" @bind-value:event="oninput" /> <br />
 
-<input type="checkbox" @bind-value="room.IsActive" checked="@(room.IsActive?"checked":null)"/> &nbsp; Is Active? <br />
-<span>This room is @(room.IsActive?"Active" : "Inactive")</span>
+    <input type="checkbox" @bind-value="room.IsActive" checked="@(room.IsActive?"checked":null)" /> &nbsp; Is Active? <br />
+    <span>This room is @(room.IsActive?"Active" : "Inactive")</span>
+    <br />
+    <select @bind="SelectedRoomProperty">
+        @foreach (var prop in room.RoomProperties)
+        {
+            <option value="@prop.Name">@prop.Name</option>
+        }
+    </select>
+    <span>The Room property selected is : @SelectedRoomProperty</span>
+</div>
+<div>
+    <hr/>
+    <h2 class="text-info">Room List [Assignment 2]</h2>
+    <table class="table table-dark">
+        @foreach(var room in RoomList)
+        {
+            <tr>
+                <td>
+                    <input type="text" @bind-value="room.Name" @bind-value:event="oninput"/>
+                </td>
+                <td>
+                    <input type="number" @bind-value="room.Price" @bind-value:event="oninput"/>
+                </td>
+
+                @foreach(var roomProperties in room.RoomProperties)
+                {
+                    <td>
+                        @roomProperties.Name - @roomProperties.Value
+                    </td>
+                }
+            </tr>
+        }
+    </table>
+    @foreach(var room in RoomList)
+    {
+        <p class="text-info">@room.Name's Price is ZAR @room.Price.ToString("N2")</p>
+    }
+</div>
+
+
 
 @code{
 
-    Data.Room room = new Data.Room
+    List<Room> RoomList = new List<Room>();
+
+    string SelectedRoomProperty = "";
+    Room room = new Room
     {
         Id = 1,
         Name = "ZitoeX Ultra Suite",
         Description = "Our most expensive suite, with 2 beds, shower, TV, toilet,....",
         Price = 1749.99,
-        IsActive = true
+        IsActive = true,
+        RoomProperties = new List<RoomProperty>
+        {
+            new RoomProperty{Id = 1, Name ="Sq Ft", Value="100"},
+            new Data.RoomProperty{Id = 2, Name = "Occupancy", Value = "3"}
+        }
     };
+
+    protected override void OnInitialized()
+    {
+        base.OnInitialized();
+
+        RoomList.Add(new Room
+        {
+            Id = 218,
+            Name = "ZitoeX Ultra Suite",
+            Description = "Our most expensive suite, with 2 beds, shower, TV, toilet,....",
+            Price = 1749.99,
+            IsActive = true,
+            RoomProperties = new List<RoomProperty>
+            {
+                new RoomProperty{Id = 1, Name ="Sq Ft", Value="100"},
+                new Data.RoomProperty{Id = 2, Name = "Occupancy", Value = "3"}
+            }
+        });
+
+        RoomList.Add(new Room
+        {
+            Id = 201,
+            Name = "ZitoeX Standard Room",
+            Description = "Our standard room, with 1 bed, shower, TV, & a toilet",
+            Price = 549.99,
+            IsActive = true,
+            RoomProperties = new List<RoomProperty>
+            {
+                new RoomProperty{Id = 1, Name ="Sq Ft", Value="70"},
+                new Data.RoomProperty{Id = 2, Name = "Occupancy", Value = "1"}
+            }
+        });
+
+
+    }
 }
