--- a/ZitoeXHotel.Server/Shared/NavMenu.razor
+++ b/ZitoeXHotel.Server/Shared/NavMenu.razor
@@ -27,6 +27,12 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Rooms
             </NavLink>
         </li>
+        
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="hoteldemo">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> HotelDemo
+            </NavLink>
+        </li>
     </ul>
 </div>
 
